; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_getchar.c_save_typebuf.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_getchar.c_save_typebuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@typebuf = common dso_local global i32 0, align 4
@saved_typebuf = common dso_local global i32* null, align 8
@curscript = common dso_local global i64 0, align 8
@FAIL = common dso_local global i64 0, align 8
@OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @save_typebuf() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @init_typebuf()
  %3 = load i32, i32* @typebuf, align 4
  %4 = load i32*, i32** @saved_typebuf, align 8
  %5 = load i64, i64* @curscript, align 8
  %6 = getelementptr inbounds i32, i32* %4, i64 %5
  store i32 %3, i32* %6, align 4
  %7 = call i64 (...) @alloc_typebuf()
  %8 = load i64, i64* @FAIL, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %0
  %11 = call i32 (...) @closescript()
  %12 = load i64, i64* @FAIL, align 8
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %1, align 4
  br label %16

14:                                               ; preds = %0
  %15 = load i32, i32* @OK, align 4
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %14, %10
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @init_typebuf(...) #1

declare dso_local i64 @alloc_typebuf(...) #1

declare dso_local i32 @closescript(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
